--- a/src/components/FriendListItem/FriendListItem.module.css
+++ b/src/components/FriendListItem/FriendListItem.module.css
@@ -1,9 +1,18 @@
 .item{
+    padding: 20px;
     display: flex;
     width: 400px;
     margin-top: 20px;
     margin-bottom: 20px;
     background-color: #fff;
-
-
+}
+.status {    
+    margin-right: 20px;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: red;
+}
+.avatar{
+    margin-right: 20px;
 }
