--- a/src/components/BlockStat/BlockStat.module.css
+++ b/src/components/BlockStat/BlockStat.module.css
@@ -5,5 +5,5 @@
     height: 100px;
     font-size: 16px;
     text-align: center;
-    background-color: green;
+    /* background-color: green; */
 }
