--- a/src/components/FriendListItem/FriendListItem.module.css
+++ b/src/components/FriendListItem/FriendListItem.module.css
@@ -6,7 +6,14 @@
     margin-bottom: 20px;
     background-color: #fff;
 }
-.status {    
+.isOnline {    
+    margin-right: 20px;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: green;
+}
+.isOfline {
     margin-right: 20px;
     width: 20px;
     height: 20px;
