--- a/src/components/TransactionHistory/TransactionHistory.module.css
+++ b/src/components/TransactionHistory/TransactionHistory.module.css
@@ -1,7 +1,9 @@
 .tableAction{
-    width: 1200px;    
+    width: 1200px; 
+    border: 1px solid #2a2a2a;
 }
 .tableHeader {
     height: 40px;
     background-color: lightblue;
+    border: 1px solid #2a2a2a;
 }
